--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,13 +94,12 @@ textarea {
    ========================================================================== */
 
 
-
-
-
-
-
-
-
+.dest {
+    height: 20px;
+    min-height: 20px;
+    border-bottom: 1px solid black;
+    width: 100%;
+}
 
 
 
