--- a/static/css/main.css
+++ b/static/css/main.css
@@ -104,8 +104,17 @@ textarea {
     background-color: #ddd;
 }
 
-
-
+#knit {
+    position: absolute;
+    top: 50px;
+    z-index:20;
+}
+#dest {
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    width: 80%;
+}
 
 
 
