add 960.gs and some sweet layout

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,19 +101,13 @@ textarea {
     width: 100%;
 }
 #output {
+    postion: absolute;
     background-color: #ddd;
 }
 
 #knit {
     position: absolute;
-    top: 50px;
     z-index:20;
-}
-#dest {
-    position: absolute;
-    top: 50px;
-    left: 0px;
-    width: 80%;
 }
 
 
