add a new note!

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -114,8 +114,12 @@ textarea {
 canvas {
     width: 700px;
 }
-
-
+.orange {
+    color: #ff613e;
+}
+h2 {
+    display: inline;
+}
 
 
 /* ==========================================================================
