--- a/static/css/main.css
+++ b/static/css/main.css
@@ -126,6 +126,10 @@ h2 {
     display: inline;
 }
 
+.type_box {
+    margin-bottom: 2px;
+    background-color: #ddd;
+}
 
 /* ==========================================================================
    Helper classes
