--- a/static/css/main.css
+++ b/static/css/main.css
@@ -126,6 +126,10 @@ h2 {
     display: inline;
 }
 
+.note {
+    width: 50px;
+}
+
 .type_box {
     margin-bottom: 2px;
     background-color: #ddd;
